--- a/styles.css
+++ b/styles.css
@@ -88,7 +88,7 @@ p {
 
 .movie-list {
     display: flex;
-    overflow: scroll;
+    overflow-y: scroll;
     gap: 1rem;
     padding-bottom: 1rem;
     scrollbar-width: thin;
@@ -96,7 +96,7 @@ p {
 }
 
 .movie-list::-webkit-scrollbar {
-    display: none;
+    /* display: none; */
 }
 
 
