--- a/styles.css
+++ b/styles.css
@@ -139,12 +139,17 @@ footer p {
     background-color: gray;
 }
 
+.modal img{
+    width: 50px;
+    height: auto;
+}
+
 
 .modal-content{
     margin-left: 20px;
     display: flex;
     gap:10px;
-    align-items: center;
+    align-items: flex-end;
     flex-wrap: wrap;
 }
 
