--- a/styles.css
+++ b/styles.css
@@ -136,14 +136,16 @@ footer p {
 }
 
 .modal{
-   
+   padding: 10px;
     position: fixed;
     z-index: 1000; /* Valeur plus élevée que le carrousel */
-    left: 50%;
-    top: 50%;
-    width: 100%;
-    height: 100%;
+    width: 25%;
+    height: auto;
     overflow: auto;
+    transform: translate(-50%, -50%);
+    background-color: rgba(210, 207, 207,0.8);
+    color: black;
+    font-weight: bold;
 }
 
 .modal button{
@@ -154,6 +156,7 @@ footer p {
 .modal img{
     width: 50px;
     height: auto;
+ 
 }
 
 
@@ -177,3 +180,10 @@ footer p {
     padding: 0px 0px;
 } 
 
+@media (max-width: 800px) {
+    .modal {
+        width: 60%;
+        height: auto;
+    }
+  
+}
